# lucas-kanade-alignment-tracking

./: .gitignore  CMakeLists.txt  README.md
include/: constants.h  tracker.h  utils.h
src/: main.cpp  tracker.cpp  utils.cpp
tests/: unit_testing.cpp
